--- a/404.html
+++ b/404.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="refresh" content="0; url=./index.html">
-  <title>Redirecting…</title>
+  <title>Not found</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  Redirecting…
+  <main class="layout" style="grid-template-columns: 1fr;">
+    <section class="results_area">
+      <h1>Page not found</h1>
+      <p><a href="/">Go to the app</a></p>
+    </section>
+  </main>
 </body>
 </html>
